[package]
name = "physics-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_egui = "0.27.0"
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_ecs = "0.13.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = "0.13.2"
bevy_ecs = "0.13.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

